--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # Compiled source
-
 *.pyc
 
 # Runtime logs
-
 RUN*.log
 
 # Python cache
-
 __pycache__
 
 # Data files
-
 settings/*.csv
+
+# Log files
+logs/*
 
