Changed GPS module to gps3. gps module is not supported in python3x. Still currently untested.

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -6,11 +6,11 @@ idle screen time = 10
 busy screen time = 0.25
 trip timeout = 900
 log extra data = False
-obd port = /dev/ttyUSB0
+obd port = /dev/ttyUSB1
 obd baud = 38400
 queues = Hi,Medium,Low,Once
 log headings = TIMESTAMP,RPM,SPEED,DISTANCE,FAM,LP100K,LPS,LPH,MAF,ENGINE_LOAD,DRIVE_RATIO,GEAR
-gps enabled = False
+gps enabled = True
 
 [Vehicle]
 tank capacity = 53.0
