Further work on config.  Added data display configuration to config. Still largely untested.

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -10,6 +10,7 @@ obd port = /dev/ttyUSB0
 obd baud = 38400
 queues = Hi,Medium,Low,Once
 log headings = TIMESTAMP,RPM,SPEED,DISTANCE,FAM,LP100K,LPS,LPH,MAF,ENGINE_LOAD,DRIVE_RATIO,GEAR
+pipe timeout = 3
 gps enabled = False
 
 [Vehicle]
