Bug fixes.  Corrected time formatting.  Fixed missing line on data screen.

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -14,15 +14,42 @@ pipe timeout = 3
 gps enabled = False
 
 [Vehicle]
-tank capacity = 53.0
-odometer = 73540.0
+tank capacity = 53
+odometer = 73540
 fuel air ratio ideal = 14.7
-fuel air ratio min = 25.0
-fuel air ratio max = 50.0
+fuel air ratio min = 25
+fuel air ratio max = 50
 fuel density = 850.8
-tyre width = 195.0
-aspect ratio = 0.65
-rim size = 15.0
+tyre width = 195
+aspect ratio = 65
+rim size = 15
+
+[Data Screen]
+line 0 = SPEED
+line 1 = RPM
+line 2 = LP100K
+line 3 = ENGINE_LOAD
+line 4 = BOOST_PRESSURE
+line 5 = COOLANT_TEMP
+line 6 = DISTANCE
+line 7 = DURATION
+line 8 = LPS
+line 9 = GEAR
+
+[Data Layout]
+speed = *Speed : SPEED.VAL/SPEED.MAX/SPEED.AVG :
+rpm = ***RPM : RPM.VAL/RPM.MAX :
+lph = ***LPH : LPH.VAL/LPH.AVG :
+lp100k = LP100k : LP100K.VAL/LP100K.AVG :
+fam = ***FAM : FAM.VAL/FAM.MAX :
+engine_load = **Load : ENGINE_LOAD.VAL/ENGINE_LOAD.AVG :
+maf = ***MAF : MAF.VAL/MAF.AVG :
+boost_pressure = *Boost : BOOST_PRESSURE.VAL/BOOST_PRESSURE.MAX :
+coolant_temp = **Temp : COOLANT_TEMP.VAL/COOLANT_TEMP.MAX :
+distance = **Trip : DISTANCE.SUM           :
+lps = **Fuel : LPS.SUM/LPH.VAL :
+duration = **Time : DURATION.SUM/IDLE_TIME.SUM :
+gear = **Gear : GEAR.VAL/DRIVE_RATIO.VAL :
 
 [Queue Hi]
 frequency = 10.0
