Added data screen length to config. Added formatting directives for additional OBD indicators (currently untested for layout).

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -12,6 +12,7 @@ queues = Hi,Medium,Low,Once
 log headings = TIMESTAMP,RPM,SPEED,DISTANCE,FAM,LP100K,LPS,LPH,MAF,ENGINE_LOAD,DRIVE_RATIO,GEAR
 pipe timeout = 3
 gps enabled = False
+data screen size = 10
 
 [Vehicle]
 tank capacity = 53
@@ -23,6 +24,7 @@ fuel density = 850.8
 tyre width = 195
 aspect ratio = 65
 rim size = 15
+transmission speeds = 5
 
 [Data Screen]
 line 0 = SPEED
@@ -47,9 +49,34 @@ maf = ***MAF : MAF.VAL/MAF.AVG :
 boost_pressure = *Boost : BOOST_PRESSURE.VAL/BOOST_PRESSURE.MAX :
 coolant_temp = **Temp : COOLANT_TEMP.VAL/COOLANT_TEMP.MAX :
 distance = **Trip : DISTANCE.SUM           :
+fuel = **Fuel : LPS.SUM/LPH.VAL :
+time = **Time : DURATION.SUM/IDLE_TIME.SUM :
+gear = **Gear : GEAR.VAL/DRIVE_RATIO.VAL :
+voltage = *Volts : CONTROL_MODULE_VOLTAGE.VAL/CONTROL_MODULE_VOLTAGE.MIN/CONTROL_MODULE_VOLTAGE.MAX :
+egr = ***EGR : CONNANDED_EGR.VAL/EGR_ERROR.VAL :
+air_temp = *Air C : AMBIANT_AIR_TEMP.VAL/AMPIANT_AIR_TEMP.MAX :
+intake_temp = Intake : INTAKE_TEMP.VAL/INTAKE_TEMP.MAX :
+fuel_rail = *Air C : FUEL_RAIL_PRESSURE_DIRECT.VAL/FUEL_RAIL_PRESSURE_DIRECT.MAX :
 lps = **Fuel : LPS.SUM/LPH.VAL :
 duration = **Time : DURATION.SUM/IDLE_TIME.SUM :
-gear = **Gear : GEAR.VAL/DRIVE_RATIO.VAL :
+
+[Transmission]
+gear neutral label = Idle
+gear 1 lower = 12.0
+gear 1 upper = 14.0
+gear 1 label = 1st
+gear 2 lower = 6.0
+gear 2 upper = 7.4
+gear 2 label = 2nd
+gear 3 lower = 3.5
+gear 3 upper = 4.5
+gear 3 label = 3rd
+gear 4 lower = 2.7
+gear 4 upper = 3.1
+gear 4 label = 4th
+gear 5 lower = 2.1
+gear 5 upper = 2.35
+gear 5 label = 5th
 
 [Queue Hi]
 frequency = 10.0
