Addedd all data fields to output for testing

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -1,5 +1,5 @@
 [Application]
-logpath = ./logs/
+logpath = ../OBDLogs/
 log frequency = 1
 statpath = ./stats/
 idle screen time = 10
@@ -37,6 +37,14 @@ line 6 = DISTANCE
 line 7 = DURATION
 line 8 = LPS
 line 9 = GEAR
+line 10 = FAM
+line 11 = MAF
+line 12 = GEAR
+line 13 = VOLTAGE
+line 14 = EGR
+line 15 = AIR_TEMP
+line 16 = INTAKE_TEMP
+line 17 = FUEL_RAIL
 
 [Data Layout]
 speed = *Speed : SPEED.VAL/SPEED.MAX/SPEED.AVG :
