--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -5,8 +5,8 @@ statpath = ./stats/
 idle screen time = 10
 busy screen time = 0.25
 trip timeout = 900
-log extra data = False
-obd port = /dev/ttyUSB0
+log extra data = True
+obd port = /dev/ttyUSB1
 obd baud = 38400
 queues = Hi,Medium,Low,Once
 log headings = TIMESTAMP,RPM,SPEED,DISTANCE,FAM,LP100K,LPS,LPH,MAF,ENGINE_LOAD,DRIVE_RATIO,GEAR
