Minor bug fixes with process flow and logging.

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -16,6 +16,7 @@ gps enabled = True
 gps product id = ea60
 gps vendor id = 10c4
 data screen size = 23
+mode = TESTING
 
 [Vehicle]
 tank capacity = 53
