Ready for testing on Pi

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -15,8 +15,8 @@ pipe timeout = 3
 gps enabled = True
 gps product id = ea60
 gps vendor id = 10c4
-data screen size = 23
-mode = TESTING
+data screen size = 10
+mode = NORMAL
 
 [Vehicle]
 tank capacity = 53
