Minor bug fixes

--- a/obdlogger.cfg
+++ b/obdlogger.cfg
@@ -16,7 +16,7 @@ gps enabled = True
 gps product id = ea60
 gps vendor id = 10c4
 data screen size = 10
-mode = NORMAL
+mode = TESTING
 
 [Vehicle]
 tank capacity = 53
